# metaLearningCUB-200-2011

./: Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
meta_project/: __init__.py  dataset.py  features.py  plots.py
meta_project/data/: data_loader.py
meta_project/modeling/: predict.py  train.py
meta_project/modeling/data/: data_loader.py  db_controller.py  db_seeder.py
notebooks/: v1_database.ipynb  v2_database_seed.ipynb  v3_prepare_data.ipynb
