[tool.poetry]
name = "meta_project"
version = "0.0.1"
description = "A short description of the project."
authors = [
  "Your name (or your organization/company/team)"
]
license = "MIT"  # Podaj nazwę licencji, np. MIT
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.10"
ipython = "*"
jupyterlab = "*"
loguru = "*"
matplotlib = "*"
mkdocs = "*"
notebook = "*"
numpy = "*"
pandas = "*"
pip = "*"
python-dotenv = "*"
ruff = "*"
scikit-learn = "*"
tqdm = "*"
typer = "*"
ray = "*"
psycopg2 = "*"
pyarrow = "*"
ipywidgets = "*"
higher = "*"

torch = { version = "*", source = "pytorch-cu121" }
torchvision = { version = "*", source = "pytorch-cu121" }
torchaudio = { version = "*", source = "pytorch-cu121" }

[tool.poetry.group.dev.dependencies]
flake8 = "*"

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 99
src = ["meta_project"]
include = ["pyproject.toml", "meta_project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["meta_project"]
force-sort-within-sections = true
